# ai-architectures/agent-battle/docs/swagger.json
@@ -36,34 +36,6 @@
                 }
             }
         },
-        "/api/v1/game/refund-expired-players": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Game"
-                ],
-                "summary": "Refund expired players",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Tweet ID",
-                        "name": "tweet_id",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                }
-            }
-        },
         "/api/v1/game/start": {
             "post": {
                 "consumes": [
@@ -155,6 +127,34 @@
                         "schema": {
                             "$ref": "#/definitions/agent-battle_internal_core_model.Game"
                         }
+                    }
+                }
+            }
+        },
+        "/api/v1/game/{tweet_id}/refund-expired-players": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Game"
+                ],
+                "summary": "Refund expired players",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Tweet ID",
+                        "name": "tweet_id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
                     }
                 }
             }
